--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
 
-# # data
-# data/
-# # figures
-# figures/
+# data
+data/
+# figures
+#figures/
 
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
